Mobile 2025 element clipping fix
Initial stream box info was cut off on mobile by the box being too small for its content.

--- a/2025/index.css
+++ b/2025/index.css
@@ -230,7 +230,7 @@ body {
 @media screen and (max-width: 1100px) {
     .main-box {
         grid-template-columns: 1fr 12fr;
-        grid-template-rows: 36.5vw repeat(2, 44vw);
+        grid-template-rows: 36.5vw repeat(2, 68vw);
         height: max-content;
         border-radius: 1vw;
         overflow: hidden;
